# TinyRenderer

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md  readme_cn.md
.github/workflow/: linux.yml  windows.yml
.github/workflows/: macos.yml
assets/ball/: ball.xml
assets/bathroom2/: bathroom2.xml
assets/bidir/: bidir.xml
assets/box/: box.xml
assets/livingroom/: livingroom.xml
assets/mis/: mis.xml
assets/teapot/: teapot.xml
assets/test/: test.xml
ext/: CMakeLists.txt
include/components/: accelerate.h  bitmap.h  bsdf.h  camera.h  emitter.h  integrator.h  mesh.h  object.h  rfilter.h  sampler.h  scene.h  texture.h
include/core/: array.h  bounding_box.h  common.h  distribution.h  frame.h  fresnel.h  intersection.h  matrix.h  microfacet.h  pcg32.h  quad.h  ray.h  record.h  spectrum.h  tensor.h  timer.h  transform.h  warp.h
include/filesystem/: path.h  resolver.h
include/parse/: parser.h  property_list.h
include/render/: block.h
src/: CMakeLists.txt
src/accelerate/: CMakeLists.txt  bvh.cpp  kdtree.cpp  naive.cpp  octree.cpp
src/bsdfs/: CMakeLists.txt  bumpmap.cpp  conductor.cpp  dielectric.cpp  diffuse.cpp  mask.cpp  plastic.cpp  roughconductor.cpp  roughdielectric.cpp  roughplastic.cpp  thindielectric.cpp  twosided.cpp
src/components/: CMakeLists.txt  bsdf.cpp  camera.cpp  emitter.cpp  mesh.cpp  object.cpp  scene.cpp
src/core/: CMakeLists.txt  common.cpp  warp.cpp
src/emitters/: CMakeLists.txt  area.cpp  envmap.cpp
src/integrators/: CMakeLists.txt  path.cpp
src/main/: main.cpp  test.cpp
src/parse/: CMakeLists.txt  parser.cpp  property_list.cpp
src/render/: CMakeLists.txt  block.cpp
src/rfilters/: CMakeLists.txt  tent.cpp
src/sampler/: CMakeLists.txt  independent.cpp
src/sensors/: CMakeLists.txt  perspective.cpp
src/shapes/: CMakeLists.txt  cube.cpp  obj.cpp  rectangle.cpp  sphere.cpp
src/textures/: CMakeLists.txt  bitmap.cpp  checkerboard.cpp  constant.cpp
