add_executable(tiny-renderer)

add_subdirectory(main)
add_subdirectory(core)
add_subdirectory(parse)
add_subdirectory(components)
add_subdirectory(shapes)
add_subdirectory(bsdfs)
add_subdirectory(sensors)
add_subdirectory(sampler)
add_subdirectory(rfilters)
add_subdirectory(integrators)
add_subdirectory(render)
add_subdirectory(emitters)
add_subdirectory(textures)
add_subdirectory(accelerate)
